# ergon-framework

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  project-structure.md
docs/modules/: 1.transaction.md  2.task.md  3.connector.md  4.service.md  5.telemetry.md
docs/rfc/: README.md  RFC-000-system-overview.md  RFC-001-transaction-model.md  RFC-002-task-model.md  RFC-003-policy-model.md  RFC-004-consumer-engine.md  RFC-005-producer-engine.md
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/docs/: cli.md  getting-started.md  project-structure.md
sdks/python/examples/nylas/: .env.example  README.md  auth_flow.py  task_consumer.py  uso_direto_async.py
sdks/python/src/ergon/: __init__.py  cli.py
sdks/python/src/ergon/bootstrap/src/__project__/: main.py
sdks/python/src/ergon/bootstrap/src/__project__/_observability/: docker-compose.telemetry.yml
sdks/python/src/ergon/bootstrap/src/__project__/tasks/: constants.py  settings.py
sdks/python/src/ergon/bootstrap/src/__project__/tasks/example_task/: config.py  exceptions.py  helpers.py  schemas.py  task.py
sdks/python/src/ergon/connector/: __init__.py  connector.py
sdks/python/src/ergon/connector/excel/: service.py
sdks/python/src/ergon/connector/nylas/: README.md  __init__.py  async_auth_service.py  async_connector.py  async_service.py  auth_service.py  connector.py  models.py  service.py  utils.py
sdks/python/src/ergon/connector/pipefy/: __init__.py  async_connector.py  async_service.py  connector.py  models.py  service.py
sdks/python/src/ergon/connector/postgres/: __init__.py  async_connector.py  async_service.py  models.py
sdks/python/src/ergon/connector/rabbitmq/: __init__.py  async_connector.py  async_service.py  connector.py  helper.py  models.py  service.py
sdks/python/src/ergon/connector/sqs/: __init__.py  async_connector.py  async_service.py  connector.py  models.py  service.py
sdks/python/src/ergon/service/: __init__.py  service.py
sdks/python/src/ergon/task/: __init__.py  base.py  exceptions.py  helpers.py  manager.py  policies.py  runner.py  utils.py
sdks/python/src/ergon/task/mixins/: __init__.py  consumer.py  helpers.py  metrics.py  producer.py  utils.py
sdks/python/src/ergon/telemetry/: logging.py  metrics.py
sdks/python/src/ergon/utils/: env.py
sdks/python/src/ergon_framework/bootstrap/src/__project__/_observability/: loki.yaml  prometheus.yaml
sdks/python/src/ergon_framework/bootstrap/src/__project__/tasks/example_task/: exceptions.py  schemas.py
sdks/python/src/ergon_framework/connector/rabbitmq/: connector.py  helper.py  service.py
sdks/python/src/ergon_framework/task/: __init__.py  manager.py  policies.py
sdks/python/src/ergon_framework/task/mixins/: utils.py
sdks/python/tests/: test_smoke.py
sdks/python/tests/connector/nylas/: test_async_connector.py  test_auth_service.py  test_connector.py  test_service.py  test_utils.py
sdks/python/tests/connector/postgres/: test_async_connector.py  test_async_service.py
sdks/python/tests/connector/rabbitmq/: test_async_connector.py  test_async_service.py
sdks/python/tests/connector/sqs/: test_connector.py  test_service.py
sdks/python/tests/task/: mocks.py  test_helpers.py  test_utils.py
sdks/python/tests/task/mixins/: test_async_consumer.py  test_async_producer.py  test_consumer.py  test_consumer_dead_channel.py  test_producer.py
src/ergon_framework/: __init__.py  cli.py
src/ergon_framework/bootstrap/src/__project__/: main.py
src/ergon_framework/bootstrap/src/__project__/_observability/: grafana.yaml  otel-collector-config.yaml  tempo.yaml
src/ergon_framework/bootstrap/src/__project__/tasks/: settings.py
src/ergon_framework/bootstrap/src/__project__/tasks/example_task/: config.py  exceptions.py  schemas.py
src/ergon_framework/connector/: __init__.py  connector.py  transaction.py
src/ergon_framework/connector/excel/: __init__.py  connector.py  models.py  service.py
src/ergon_framework/connector/rabbitmq/: models.py  service.py
src/ergon_framework/task/: __init__.py  base.py  exceptions.py  policies.py
src/ergon_framework/task/mixins/: consumer.py  helpers.py  producer.py
src/ergon_framework/telemetry/: __init__.py  _resource.py  tracing.py
src/ergon_framework/utils/: __init__.py  env.py
website/: architecture.html  connector.html  index.html  project-structure.html  service.html  task.html  telemetry.html  transaction.html
