[project]
name = "ergon-framework-python"
version = "0.1.0"
description = "Ergon internal task-oriented project bootstrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "more-itertools>=10.8.0",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pre-commit>=4.5.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ergon_framework" = ["bootstrap/**/*"]

# -------------------------
# Ruff configuration
# -------------------------
[tool.ruff]
target-version = "py313"
line-length = 120

# Enable linting + import sorting
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E101"]  # allow real tabs, ignore mixed indentation errors

# Allow Ruff to automatically fix (acts as Black + isort replacement)
fix = true

[tool.ruff.format]
# Ruff formatter replaces Black
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# Behave similar to Black formatting rules
skip-magic-trailing-comma = false

[project.scripts]
ergon = "ergon_framework.cli:ergon"
