[project]
name = "ergon-framework-python"
version = "0.1.1"
description = "Ergon internal task-oriented project bootstrapper"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Ergondata Technologies", email = "anza.vossos@protonmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aio-pika>=9.0.0",
    "aiobotocore>=2.13.0",
    "asyncpg>=0.29.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "more-itertools>=10.8.0",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pika>=1.3.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ergon" = ["py.typed", "bootstrap/**/*"]

# -------------------------
# Ruff configuration
# -------------------------
[tool.ruff]
target-version = "py313"
line-length = 120

# Enable linting + import sorting
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E101"]  # allow real tabs, ignore mixed indentation errors

# Allow Ruff to automatically fix (acts as Black + isort replacement)
fix = true

[tool.ruff.format]
# Ruff formatter replaces Black
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# Behave similar to Black formatting rules
skip-magic-trailing-comma = false

# -------------------------
# Pyright configuration
# -------------------------
[tool.pyright]
pythonVersion = "3.10"
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

# -------------------------
# Pytest configuration
# -------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# ``auto`` mode auto-applies ``pytest.mark.asyncio`` to ``async def`` tests
# and leaves sync tests alone, avoiding the spurious "marked async but not
# async function" warnings that ``pytestmark`` at module level produced.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.urls]
Homepage = "https://github.com/danzanellovossos/ergon-framework"
Repository = "https://github.com/danzanellovossos/ergon-framework"
Issues = "https://github.com/danzanellovossos/ergon-framework/issues"

[project.scripts]
ergon = "ergon.cli:ergon"
